[package]
name = "jupiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sovereign-sdk =  { git = "https://github.com/Sovereign-Labs/sovereign.git", rev = "5e43c3ee9b5785abdca33b21c86fd38dbd9285e0" }
tendermint = "0.27"

prost = "0.11"
prost-types = "0.11"
borsh = { version = "0.10.3", features = ["bytes"] }

# Convenience
reqwest = { version = "0.11.13", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11.2"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.3.4"
base64 = "0.13.1"
anyhow = "1.0.62"
jsonrpsee = { version = "0.16.2", features = ["http-client"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"


#nmt-rs = { path = "../nmt-rs", features = ["serde", "borsh"] }
nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "36bffad64cf257264069e3b04679d945d0a0af36", features = ["serde", "borsh"] }

[build-dependencies]
prost-build = { version = "0.11" }


#[patch.'https://github.com/Sovereign-Labs/sovereign.git']
#sovereign-sdk = { path = "../sovereign/sdk" }
