[package]
name = "jupiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sovereign-sdk =  { git = "https://github.com/Sovereign-Labs/sovereign.git", rev = "fbf8b628ecf8ddcf3e6da631d3f22ab66280a703" }
tendermint = "0.32"
tendermint-proto = "0.32"

prost = "0.11"
prost-types = "0.11"
borsh = { version = "0.10.3", features = ["bytes"] }

# Convenience
reqwest = { version = "0.11.13", features = ["blocking"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11.2"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.3.4"
base64 = "0.13.1"
anyhow = "1.0.62"
jsonrpsee = { version = "0.16.2", features = ["http-client"], optional = true }
tracing = "0.1.37"

nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "aec2dcdc279b381162537f5b20ce43d1d46dc42f", features = ["serde", "borsh"] }

[dev-dependencies]
postcard = { version = "1", features = ["use-std"]}

[build-dependencies]
prost-build = { version = "0.11" }


[patch.crates-io]
# Patch tendermint until the "0.32" release lands. We need 0.32 to avoid a lot of unnecessary data copying during header verification
tendermint = { git = "https://github.com/informalsystems/tendermint-rs.git", rev = "e014de927abed7c5fcbf8186780a61b5c9c1e775" }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs.git", rev = "e014de927abed7c5fcbf8186780a61b5c9c1e775" }

[features]
default = ["native"]
native = ["dep:tokio", "dep:reqwest", "dep:jsonrpsee"]
verifier = []
